Index portfolio part converted to javascript

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!--<img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">-->
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading <!--text-uppercase--> mb-0">Cihat Özdemir</h1>
+      <h1 class="masthead-heading mb-0">Cihat Özdemir</h1> <!--text-uppercase-->
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -95,6 +95,7 @@
         <!-- tabs -->
         <div class="row justify-content-md-center">
             <div class="col-xs-10 col-md-10 col-xl-10">
+                <!-- PORTFOLIO TITLES -->
                 <ul class="nav nav-tabs nav-pills nav-fill " role="tablist">
                     <li class="nav-item"> <a class="active nav-link" id="nav-professional-tab" data-toggle="tab" href="#nav-professional" role="tab" aria-controls="nav-professional" aria-selected="true">Profesyonel Projeler</a> </li>
 
@@ -104,90 +105,20 @@
                     <!-- <li class="nav-item"> <a class="nav-link" id="nav-articles-tab" data-toggle="tab" href="#nav-articles" role="tab" aria-controls="nav-articles" aria-selected="false">Articles &amp; Tutorials</a> </li> -->
                 </ul>
                 <div class="tab-content py-4 px-3 px-sm-0" id="nav-tabContent">
+                    <!-- GELİŞTİRDİĞİM EKLENTİLER -->
                     <div class="tab-pane fade" id="nav-tools" role="tabpanel" aria-labelledby="nav-tools-tab">
                         <div class="row">
-                            <!-- Portfolio Item 1 -->
-                            <div class="col-lg-4 col-md-6 mb-4">
-                                <div class=" bg-white rounded shadow-sm">
-                                    <img src="img/ToolsPortfolio/gaitool.png" alt="" class="img-fluid card-img-top">
-                                    <div class="p-3 d-block">
-                                        <h5> <a class="text-dark d-block text-truncate stretched-link" data-toggle="modal" href="#g-ai">G-AI</a></h5>
-                                        <p class="d-block text-truncate small text-muted mb-0">Kolaylıkla davranış ağacı ve yapay zeka oluşturmanızı sağlayan Unity eklentisidir.</p>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Unity</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">AI</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Behavior Tree</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Editor Extension</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Portfolio Item 2 -->
-                            <div class="col-lg-4 col-md-6 mb-4">
-                                <div class=" bg-white rounded shadow-sm">
-                                    <img src="img/ToolsPortfolio/UISpriteManager-1200.png" alt="" class="img-fluid card-img-top">
-                                    <div class="p-3 d-block">
-                                        <h5> <a class="text-dark d-block text-truncate stretched-link" 
-                                                data-toggle="modal" href="#modalUISpriteManager">G-Pooler</a></h5>
-                                        <p class="d-block text-truncate small text-muted mb-0">Obje havuzu oluşturmayı ve kullanmayı kolaylaştıran Unity eklentisidir.</p>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Unity</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Pool</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Editor Extension</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Portfolio Item 3 -->
-                            <div class="col-lg-4 col-md-6 mb-4">
-                                <div class=" bg-white rounded shadow-sm">
-                                    <img src="img/ToolsPortfolio/FlexGridLayout-1200.jpg" alt="" class="img-fluid card-img-top">
-                                    <div class="p-3 d-block">
-                                        <h5>
-                                            <a class="text-dark d-block text-truncate stretched-link"
-                                               data-toggle="modal" href="#modalFlexGridLayout">Simple Tutorial Manager</a>
-                                        </h5>
-                                        <p class="d-block text-truncate small text-muted mb-0">Hızlı bir şekilde tutorial oluşturmanıza olanak sağlar.</p>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Unity</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">UI</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Layout</div>
-                                     </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
+                    <!-- KENDİ PROJELERİM -->
                     <div class="tab-pane fade" id="nav-freelance" role="tabpanel" aria-labelledby="nav-freelance-tab">
                         <div class="row">
-                            <!-- Portfolio Item 1 -->
-							              <div class="col-lg-4 col-md-6 mb-4">
-                                <div class=" bg-white rounded shadow-sm">
-                                    <img src="img/Extra/noPhoto.png" alt="" class="img-fluid card-img-top">
-                                    <div class="p-3 d-block">
-                                        <h5> <a class="text-dark d-block text-truncate stretched-link" data-toggle="modal" href="#modalTeachingGame">Bitirme Tezi</a></h5>
-                                        <p class="d-block text-truncate small text-muted mb-0">Üniversite için yaptığım bitirme tezi ektedir.</p>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Unity</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">3D</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Hyper-casual</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Educational</div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>   
                     </div>
+                    <!-- PROFESYONEL PROJELER -->
                     <div class="tab-pane fade show active" id="nav-professional" role="tabpanel" aria-labelledby="nav-professional-tab">
-                     
-                        <h5 class=" text-dark p-4">Raising Game Studio: <span class=" text-dark p-4 h6">(Bazı Projeler)</span></h5>
+                        <!--<h5 class=" text-dark p-4">Raising Game Studio: <span class=" text-dark p-4 h6">(Bazı Projeler)</span></h5>-->
                         <div class="row">
-                            <!-- Portfolio Item 1 -->
-                            <div class="col-lg-4 col-md-6 mb-4">
-                                <div class=" bg-white rounded shadow-sm">
-                                    <img src="img/portfolio/battlerun3d-1.jpg" alt="" class="img-fluid card-img-top">
-                                    <div class="p-3 d-block">
-                                        <h5> <a class="text-dark d-block text-truncate stretched-link" data-toggle="modal" href="#battlerun3d">Battle Run 3D</a></h5>
-                                        <p class="d-block text-truncate small text-muted mb-0">Hyper-casual runner game.</p>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Unity</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">3D</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Mobile</div>
-                                        <div class="badge badge-primary px-2 rounded-pill font-weight-normal">Hyper-casual</div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -361,8 +292,10 @@
       <i class="fa fa-chevron-up"></i>
     </a>
   </div>
-
+  
+  <!----------------------------------------------->
   <!-- Portfolio Modals -->
+  <!----------------------------------------------->
 
     <!-- Battle Run 3D -->
     <div class="portfolio-modal modal fade" id="battlerun3d" tabindex="-1" role="dialog" aria-labelledby="battlerun3dLabel" aria-hidden="true">
@@ -492,7 +425,7 @@
     </div>
 
     <!-- Portfolio Modal UI Sprite Manager-->
-    <div class="portfolio-modal modal fade" id="modalUISpriteManager" tabindex="-1" role="dialog" aria-labelledby="modalUISpriteManagerLabel" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="g-pooler" tabindex="-1" role="dialog" aria-labelledby="g-poolerLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -535,7 +468,7 @@
     </div>
 
     <!-- Portfolio Modal UI Sprite Manager-->
-    <div class="portfolio-modal modal fade" id="modalFlexGridLayout" tabindex="-1" role="dialog" aria-labelledby="modalFlexGridLayoutLabel" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="tutorialmanager" tabindex="-1" role="dialog" aria-labelledby="tutorialmanagerLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -692,6 +625,11 @@
         </div>
     </div>
 
+
+  <!----------------------------------------------->
+  <!-- Portfolio Modals END -->
+  <!----------------------------------------------->
+
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -705,6 +643,69 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/freelancer.min.js"></script>
+
+  <script type="text/javascript">
+    function createPortfolioTab(addedElementID, imgPath, targetID, title, innerText, tags) {
+        var addedElement = document.getElementById(addedElementID);
+
+        var baseDiv = document.createElement("div");
+        baseDiv.classList.add('col-lg-4', 'col-md-6', 'mb-4');
+        var secondDiv = document.createElement("div");
+        secondDiv.classList.add('bg-white', 'rounded', 'shadow-sm');
+        var tabImage = document.createElement("img");
+        tabImage.classList.add('img-fluid', 'card-img-top');
+        tabImage.src = imgPath;
+        var innerDiv = document.createElement("div");
+        innerDiv.classList.add('p-3', 'd-block');
+        var hTag = document.createElement('h5');
+        var aTag = document.createElement('a');
+        aTag.classList.add('text-dark', 'd-block', 'text-truncate', 'stretched-link');
+        aTag.href = targetID;
+        aTag.innerText = title;
+        aTag.setAttribute('data-toggle', 'modal');
+        var pTag = document.createElement('p');
+        pTag.classList.add('d-block', 'text-truncate', 'small', 'text-muted', 'mb-0');
+        pTag.textContent = innerText;
+
+        baseDiv.appendChild(secondDiv);
+        secondDiv.appendChild(tabImage);
+        secondDiv.appendChild(innerDiv);
+        innerDiv.appendChild(hTag);
+        innerDiv.appendChild(pTag);
+        hTag.appendChild(aTag);
+        addedElement.children[0].appendChild(baseDiv);
+
+        //ADD TAGS
+        var tagList = tags.split(",");
+        tagList.forEach(element => {
+            innerDiv.appendChild(createTag(element));
+        });
+    }
+
+    function createTag(tagName){
+        var createdTag = document.createElement('div');
+        createdTag.classList.add('badge', 'badge-primary', 'px-2', 'rounded-pill', 'font-weight-normal');
+        createdTag.textContent = tagName;
+        return createdTag;
+    }
+
+    $(document).ready(function() {
+        //TOOLS
+        createPortfolioTab("nav-tools", "img/ToolsPortfolio/gaitool.png", "#g-ai", "G-AI", 
+        "Kolaylıkla davranış ağacı oluşturmanızı sağlayan Unity eklentisidir.", "Unity,AI,Behavior Tree,Editor Extension");
+        createPortfolioTab("nav-tools", "img/ToolsPortfolio/gaitool.png", "#g-pooler", "G-Pooler", 
+        "Obje havuzu oluşturmayı ve kullanmayı kolaylaştıran Unity eklentisidir.", "Unity,Object Pool,Editor Extension");
+        createPortfolioTab("nav-tools", "img/ToolsPortfolio/gaitool.png", "#tutorialmanager", "Simple Tutorial Manager", 
+        "Hızlı bir şekilde tutorial oluşturmanıza olanak sağlar.", "Unity,Tutorial,Editor Extension");
+        //MY PROJECTS
+        createPortfolioTab("nav-freelance", "img/Extra/noPhoto.png", "#thesis", "Bitirme Tezim",
+        "Üniversite için yaptığım bitirme tezi bulunmaktadır.", "Hyper-casual,Education,Thesis");
+        //PROFESSIONAL PROJECTS
+        createPortfolioTab("nav-professional", "img/portfolio/battlerun3d-1.jpg", "#battlerun3d", "Battle Run 3D",
+        "Hyper-casual runner game.", "Hyper-casual,Unity,Mobile");
+     });
+
+  </script>
 
 </body>
 
