New Games Added to portfolio
G-Pooler added

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
   <!----------------------------------------------->
   <!-- Portfolio Modals -->
   <!----------------------------------------------->
-
+  
   <!-- Battle Run 3D -->
   <div class="portfolio-modal modal fade" id="battlerun3d" tabindex="-1" role="dialog"
     aria-labelledby="battlerun3dLabel" aria-hidden="true">
@@ -360,7 +360,6 @@
     </div>
   </div>
   </div>
-
   <!-- Crazy Shot -->
   <div class="portfolio-modal modal fade" id="crazyshot" tabindex="-1" role="dialog" aria-labelledby="crazyshotLabel"
     aria-hidden="true">
@@ -406,7 +405,6 @@
       </div>
     </div>
   </div>
-
 
     <!-- Rough Rock -->
     <div class="portfolio-modal modal fade" id="roughrock" tabindex="-1" role="dialog" aria-labelledby="roughrockLabel"
@@ -593,6 +591,191 @@
       </div>
     </div>
 
+  <!-- Idle Water City -->
+  <div class="portfolio-modal modal fade" id="idlewatercity" tabindex="-1" role="dialog" aria-labelledby="idlewatercityLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Idle Water City</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+
+              </div>
+
+              <!-- Portfolio Modal - Images -->
+              <img class="img-fluid rounded mb-5" src="img/portfolio/idlewatercity-1.png" alt="">
+                <!-- Portfolio Modal - Text -->
+                <p class="mb-5 text">Welcome to a brand new click game. The city is on fire and needs your 
+                  help to put it out. Produce as many drops of water as possible by operating a water production 
+                  center. Unlock buildings, put out the fire to earn money. Upgrade buildings, increase income. 
+                  Enjoy the entertainment center and zoo. Can you save the whole city before the animals burn first?
+                </p>
+
+                <a href="https://apps.apple.com/us/app/idle-water-city/id1669182924"
+                  target="_blank"><img class="img-fluid rounded mb-5" src="img/Extra/footer_appstore.png"
+                    alt=""></a><br />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Braking Race -->
+    <div class="portfolio-modal modal fade" id="brakingrace" tabindex="-1" role="dialog" aria-labelledby="brakingraceLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Braking Race</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+
+              </div>
+
+              <!-- Portfolio Modal - Images -->
+              <img class="img-fluid rounded mb-5" src="img/portfolio/brakingrace-1.png" alt="">
+              <!-- Portfolio Modal - Text -->
+                <p class="mb-5 text"><br />Catch and stop the vehicle whose brake is blown
+                  Are you ready for rescue mission with monster truck?
+                  He has to hurry to stop the vehicles that have burst brakes!
+                  Be careful when braking!
+                </p>
+
+                <a href="https://apps.apple.com/us/app/braking-race/id6445799672"
+                  target="_blank"><img class="img-fluid rounded mb-5" src="img/Extra/footer_appstore.png"
+                    alt=""></a><br />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Real Soldier War -->
+    <div class="portfolio-modal modal fade" id="realsoldierwar" tabindex="-1" role="dialog" aria-labelledby="realsoldierwarLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Real Soldier War</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+
+              </div>
+
+              <!-- Portfolio Modal - Images -->
+              <img class="img-fluid rounded mb-5" src="img/portfolio/realsoldierwar-1.png" alt="">
+              <!-- Portfolio Modal - Text -->
+                <p class="mb-5 text"><br />Real Hero!
+                  Will you be able to survive this Earth?! You are the true hero, 
+                  the only force capable of resisting and defeating the oncoming waves of evil!
+                </p>
+
+                <a href="https://apps.apple.com/us/app/real-soldier-war/id6446580789"
+                  target="_blank"><img class="img-fluid rounded mb-5" src="img/Extra/footer_appstore.png"
+                    alt=""></a><br />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- 3D Merge -->
+    <div class="portfolio-modal modal fade" id="3dmerge" tabindex="-1" role="dialog" aria-labelledby="3dmergeLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">3D Merge</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+
+              </div>
+
+              <!-- Portfolio Modal - Images -->
+              <img class="img-fluid rounded mb-5" src="img/portfolio/3dmerge-1.png" alt="">
+              <!-- Portfolio Modal - Text -->
+                <p class="mb-5 text"><br />Match Game! Merge 3D objects and gain money!
+                </p>
+
+                <a href="https://apps.apple.com/us/app/3d-merge/id6446903927"
+                  target="_blank"><img class="img-fluid rounded mb-5" src="img/Extra/footer_appstore.png"
+                    alt=""></a><br />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
   <!-- Portfolio Modal G-AI -->
   <div class="portfolio-modal modal fade" id="g-ai" tabindex="-1" role="dialog"
     aria-labelledby="modalPrefabManagerLabel" aria-hidden="true">
@@ -639,7 +822,7 @@
     </div>
   </div>
 
-  <!-- Portfolio Modal UI Sprite Manager-->
+  <!-- G-Pooler -->
   <div class="portfolio-modal modal fade" id="g-pooler" tabindex="-1" role="dialog" aria-labelledby="g-poolerLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
@@ -654,7 +837,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">UI Sprite Manager</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">G-Pooler</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -664,20 +847,14 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/ToolsPortfolio/UISpriteManager-1200.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/ToolsPortfolio/G-Pooler-Logo.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5 text">Unity asset that helps you to reskin your game easily. As artists have to modify
-                  images frequently to make it better, and developers have to reflect that change, as the old reference
-                  becomes Missing (if the name of the updated sprite is not the same).
+                <p class="mb-5 text">Hızlı ve Performanslı bir şekilde obje havuzu oluşturmanıza olanak tanır. Esnek yapısı ile
+                  projenize kolayca entegre edebilirsiniz.
                 </p>
 
-                <a href="http://u3d.as/PKH" target="_blank"><img class="img-fluid rounded mb-5"
-                    src="img/Extra/footer_unity.png" alt=""></a><br />
-
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close Window
-                </button>
+                <a href="https://github.com/Hot-G/G-AI" target="_blank"><img class="img-fluid rounded mb-5"
+                  src="img/Extra/footer_github.png" alt=""></a><br />
               </div>
             </div>
           </div>
@@ -926,14 +1103,20 @@
       //TOOLS
       createPortfolioTab("nav-tools", "img/ToolsPortfolio/gaitool.png", "#g-ai", "G-AI",
         "Kolaylıkla davranış ağacı oluşturmanızı sağlayan Unity eklentisidir.", "Unity,AI,Behavior Tree,Editor Extension");
-      createPortfolioTab("nav-tools", "img/ToolsPortfolio/gaitool.png", "#g-pooler", "G-Pooler",
+      createPortfolioTab("nav-tools", "img/ToolsPortfolio/g-pooler-tool-banner.png", "#g-pooler", "G-Pooler",
         "Obje havuzu oluşturmayı ve kullanmayı kolaylaştıran Unity eklentisidir.", "Unity,Object Pool,Editor Extension");
-      createPortfolioTab("nav-tools", "img/ToolsPortfolio/gaitool.png", "#tutorialmanager", "Simple Tutorial Manager",
-        "Hızlı bir şekilde tutorial oluşturmanıza olanak sağlar.", "Unity,Tutorial,Editor Extension");
+      //createPortfolioTab("nav-tools", "img/ToolsPortfolio/gaitool.png", "#tutorialmanager", "Simple Tutorial Manager",
+      //  "Hızlı bir şekilde tutorial oluşturmanıza olanak sağlar.", "Unity,Tutorial,Editor Extension");
       //MY PROJECTS
-      createPortfolioTab("nav-freelance", "img/Extra/noPhoto.png", "#thesis", "Bitirme Tezim",
-        "Üniversite için yaptığım bitirme tezi bulunmaktadır.", "Hyper-casual,Education,Thesis");
+      //createPortfolioTab("nav-freelance", "img/Extra/noPhoto.png", "#thesis", "Bitirme Tezim",
+      //  "Üniversite için yaptığım bitirme tezi bulunmaktadır.", "Hyper-casual,Education,Thesis");
       //PROFESSIONAL PROJECTS
+      createPortfolioTab("nav-professional", "img/portfolio/realsoldierwar-banner.png", "#realsoldierwar", "Real Soldier War",
+        "Attack and destroy the Enemies.", "Hyper-casual,Unity,Mobile");
+      createPortfolioTab("nav-professional", "img/portfolio/brakingrace-banner.png", "#brakingrace", "Braking Race",
+        "Brakes save lives!", "Casual,Unity,Mobile");
+      createPortfolioTab("nav-professional", "img/portfolio/idlewatercity-banner.png", "#idlewatercity", "Idle Water City",
+        "Extinguish the city!", "Casual,Unity,Mobile");
       createPortfolioTab("nav-professional", "img/portfolio/halloweendefense-banner.png", "#halloweendefense", "Halloween Defense",
         "Halloween Base Defense Game.", "Hyper-casual,Unity,Mobile");
       createPortfolioTab("nav-professional", "img/portfolio/helicopteroperation-banner.png", "#helicopteroperation", "Helicopter Operation",
