--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             <li class="nav-item"> <a class="nav-link" id="nav-tools-tab" data-toggle="tab" href="#nav-tools" role="tab"
                 aria-controls="nav-tools" aria-selected="false">Geliştirdiğim Eklentiler</a> </li>
             <!--   <li class="nav-item"> <a class="nav-link" id="nav-indie-tab" data-toggle="tab" href="#nav-indie" role="tab" aria-controls="nav-indie" aria-selected="false">Indie Games</a> </li> -->
-            <li class="nav-item"> <a class="nav-link" id="nav-freelance-tab" data-toggle="tab" href="#nav-freelance"
-                role="tab" aria-controls="nav-freelance" aria-selected="false">Kendi Projelerim</a> </li>
+            <li class="nav-item"> <a class="nav-link" id="nav-business-tab" data-toggle="tab" href="#nav-business"
+                role="tab" aria-controls="nav-business" aria-selected="false">Çalıştığım Şirketler</a> </li>
             <!-- <li class="nav-item"> <a class="nav-link" id="nav-articles-tab" data-toggle="tab" href="#nav-articles" role="tab" aria-controls="nav-articles" aria-selected="false">Articles &amp; Tutorials</a> </li> -->
           </ul>
           <div class="tab-content py-4 px-3 px-sm-0" id="nav-tabContent">
@@ -119,7 +119,7 @@
               </div>
             </div>
             <!-- KENDİ PROJELERİM -->
-            <div class="tab-pane fade" id="nav-freelance" role="tabpanel" aria-labelledby="nav-freelance-tab">
+            <div class="tab-pane fade" id="nav-business" role="tabpanel" aria-labelledby="nav-business-tab">
               <div class="row">
               </div>
             </div>
@@ -314,6 +314,10 @@
   <!----------------------------------------------->
   <!-- Portfolio Modals -->
   <!----------------------------------------------->
+
+  <!----------------------------------------------->
+  <!-- GAMES -->
+  <!----------------------------------------------->
   
   <!-- Battle Run 3D -->
   <div class="portfolio-modal modal fade" id="battlerun3d" tabindex="-1" role="dialog"
@@ -406,8 +410,8 @@
     </div>
   </div>
 
-    <!-- Rough Rock -->
-    <div class="portfolio-modal modal fade" id="roughrock" tabindex="-1" role="dialog" aria-labelledby="roughrockLabel"
+  <!-- Rough Rock -->
+  <div class="portfolio-modal modal fade" id="roughrock" tabindex="-1" role="dialog" aria-labelledby="roughrockLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
@@ -450,7 +454,6 @@
       </div>
     </div>
   </div>
-
 
   <!-- Paint Boom -->
   <div class="portfolio-modal modal fade" id="paintboom" tabindex="-1" role="dialog" aria-labelledby="paintboomLabel"
@@ -497,9 +500,8 @@
   </div>
 </div>
 
-
-    <!-- Helicopter Operation -->
-    <div class="portfolio-modal modal fade" id="helicopteroperation" tabindex="-1" role="dialog" aria-labelledby="helicopteroperationLabel"
+  <!-- Helicopter Operation -->
+  <div class="portfolio-modal modal fade" id="helicopteroperation" tabindex="-1" role="dialog" aria-labelledby="helicopteroperationLabel"
     aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
@@ -544,52 +546,52 @@
     </div>
   </div>
 
-      <!-- Halloween Defense -->
-      <div class="portfolio-modal modal fade" id="halloweendefense" tabindex="-1" role="dialog" aria-labelledby="halloweendefenseLabel"
-      aria-hidden="true">
-      <div class="modal-dialog modal-xl" role="document">
-        <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">
-              <i class="fas fa-times"></i>
-            </span>
-          </button>
-          <div class="modal-body text-center">
-            <div class="container">
-              <div class="row justify-content-center">
-                <div class="col-lg-8">
-                  <!-- Portfolio Modal - Title -->
-                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Halloween Defense</h2>
-                  <!-- Icon Divider -->
-                  <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
-                    </div>
-                    <div class="divider-custom-line"></div>
+  <!-- Halloween Defense -->
+  <div class="portfolio-modal modal fade" id="halloweendefense" tabindex="-1" role="dialog" aria-labelledby="halloweendefenseLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Halloween Defense</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
                   </div>
-  
+                  <div class="divider-custom-line"></div>
                 </div>
-  
-                <!-- Portfolio Modal - Images -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/halloweendefense-1.png" alt="">
-                <!-- Portfolio Modal - Text -->
-                  <p class="mb-5 text"><br />Halloween temalı tek defans oyununu oynamaya hazır mısınız?
-                    Mısır tarlanızı düşmanlardan koruyabilir misiniz?
-                    Çitleri çekerek duvar örebilir, dilerseniz başlarının üzerinden balkabağı patlatabilirsiniz. Mancınıklarınız ve şeker okçularınız ile uzaktan saldırabilirsiniz.
-                    Tam bir savunma için topları ve makineli tüfekleri geliştirebilir ve kullanabilirsiniz.
-                  </p>
-  
-                  <a href="https://play.google.com/store/apps/details?id=com.raisinggamestudio.halloweendefense"
-                    target="_blank"><img class="img-fluid rounded mb-5" src="img/Extra/footer_googleplay.png"
-                      alt=""></a><br />
-                </div>
+
+              </div>
+
+              <!-- Portfolio Modal - Images -->
+              <img class="img-fluid rounded mb-5" src="img/portfolio/halloweendefense-1.png" alt="">
+              <!-- Portfolio Modal - Text -->
+                <p class="mb-5 text"><br />Halloween temalı tek defans oyununu oynamaya hazır mısınız?
+                  Mısır tarlanızı düşmanlardan koruyabilir misiniz?
+                  Çitleri çekerek duvar örebilir, dilerseniz başlarının üzerinden balkabağı patlatabilirsiniz. Mancınıklarınız ve şeker okçularınız ile uzaktan saldırabilirsiniz.
+                  Tam bir savunma için topları ve makineli tüfekleri geliştirebilir ve kullanabilirsiniz.
+                </p>
+
+                <a href="https://play.google.com/store/apps/details?id=com.raisinggamestudio.halloweendefense"
+                  target="_blank"><img class="img-fluid rounded mb-5" src="img/Extra/footer_googleplay.png"
+                    alt=""></a><br />
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
   <!-- Idle Water City -->
   <div class="portfolio-modal modal fade" id="idlewatercity" tabindex="-1" role="dialog" aria-labelledby="idlewatercityLabel"
@@ -775,6 +777,9 @@
     </div>
   </div>
   
+  <!----------------------------------------------->
+  <!-- TOOLS -->
+  <!----------------------------------------------->
 
   <!-- Portfolio Modal G-AI -->
   <div class="portfolio-modal modal fade" id="g-ai" tabindex="-1" role="dialog"
@@ -1035,6 +1040,167 @@
     </div>
   </div>
 
+  <!----------------------------------------------->
+  <!-- COMPANY -->
+  <!----------------------------------------------->
+
+      <!-- Raising Game Studio -->
+      <div class="portfolio-modal modal fade" id="raisinggame" tabindex="-1" role="dialog" aria-labelledby="raisinggameLabel"
+      aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">
+              <i class="fas fa-times"></i>
+            </span>
+          </button>
+          <div class="modal-body text-center">
+            <div class="container">
+              <div class="justify-content-center">
+                <div class="col-lg-8 center-div">
+                  <!-- Portfolio Modal - Title -->
+                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Raising Game Studio</h2>
+                  <!-- Icon Divider -->
+                  <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                      <i class="fas fa-star"></i>
+                    </div>
+                    <div class="divider-custom-line"></div>
+                  </div>
+  
+                </div>
+  
+                <!-- Portfolio Modal - Images -->
+                <img class="img-fluid rounded mb-5" src="img/business/raisinggame-logo.png" alt="">
+                <!-- Portfolio Modal - Text -->
+                  <p class="mb-5 text"><br />Raising Game Studio bünyesinde çalışırken geliştirdiğim oyunlar:<br />
+                    • 3D Merge<br />
+                    • Real Soldier War<br />
+                    • Braking Race<br />
+                    • Idle Water City<br />
+                    • Hand Run<br />
+                    • Braking Race<br />
+                    • Casual Football<br />
+                    • Halloween Defense<br />
+                    • Helicopter Operation<br />
+                    • Paint Boom<br />
+                    • Brave Chicken<br />
+                    • Rough Rock<br />
+                    • Crazy Water<br />
+                    • Crazy Shot<br />
+                    • City Crash<br />
+                    • Balloon Runner<br />
+                    • Goal Runner<br />
+                    • Battle Run 3D<br />
+                    • Wonder Run 3D<br />
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Coconut Game Studio -->
+    <div class="portfolio-modal modal fade" id="coconutgame" tabindex="-1" role="dialog" aria-labelledby="coconutgameLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="justify-content-center">
+              <div class="col-lg-8 center-div">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Coconut Game Studio</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+
+              </div>
+
+              <!-- Portfolio Modal - Images -->
+              <img class="img-fluid rounded mb-5" src="img/business/coconutgame-logo.jpeg" alt="">
+              <!-- Portfolio Modal - Text -->
+                <p class="mb-5 text"><br />Coconut Game Studio bünyesinde çalışırken geliştirdiğim oyunlar:<br />
+                  • Ambulance Rush<br />
+                  • Bad Pinocchio<br />
+                  • Credit Card Stack<br />
+                  • Famous Manager<br />
+                  • Good Driver<br />
+                  • Jelly Bean Run<br />
+                  • Jelly Way<br />
+                  • Let's Get Together<br />
+                  • Mr. Funny<br />
+                  • NFT Master<br />
+                  • Pancake Fall<br />
+                  • Perfect First Date<br />
+                  • Pickpocket Rush<br />
+                  • Shakey<br />
+                  • Stop The Attack<br />
+                  • Thief Run<br />
+                  • Train Master 3D<br />
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- Atlam Game Studio -->
+    <div class="portfolio-modal modal fade" id="atlamgame" tabindex="-1" role="dialog" aria-labelledby="atlamgameLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="justify-content-center">
+              <div class="col-lg-8 center-div">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Atlam Game Studio</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+
+              </div>
+
+              <!-- Portfolio Modal - Images -->
+              <img class="img-fluid rounded mb-5" src="img/business/atlamgame-logo.jpeg" alt="">
+              <!-- Portfolio Modal - Text -->
+                <p class="mb-5 text"><br />Atlam Game Studio bünyesinde çalışırken geliştirdiğim oyunlar:<br />
+                  • Millionaire World : Online<br />
+                  • Puzzle Master World<br />
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!----------------------------------------------->
   <!-- Portfolio Modals END -->
@@ -1107,9 +1273,13 @@
         "Obje havuzu oluşturmayı ve kullanmayı kolaylaştıran Unity eklentisidir.", "Unity,Object Pool,Editor Extension");
       //createPortfolioTab("nav-tools", "img/ToolsPortfolio/gaitool.png", "#tutorialmanager", "Simple Tutorial Manager",
       //  "Hızlı bir şekilde tutorial oluşturmanıza olanak sağlar.", "Unity,Tutorial,Editor Extension");
-      //MY PROJECTS
-      //createPortfolioTab("nav-freelance", "img/Extra/noPhoto.png", "#thesis", "Bitirme Tezim",
-      //  "Üniversite için yaptığım bitirme tezi bulunmaktadır.", "Hyper-casual,Education,Thesis");
+      //BUSINESS
+      createPortfolioTab("nav-business", "img/business/raisinggame-logo.png", "#raisinggame", "Raising Game Studio",
+        "", "");
+        createPortfolioTab("nav-business", "img/business/coconutgame-logo.jpeg", "#coconutgame", "Coconut Game Studio",
+        "", "");
+        createPortfolioTab("nav-business", "img/business/atlamgame-logo.jpeg", "#atlamgame", "Atlam Game Studio",
+        "", "");
       //PROFESSIONAL PROJECTS
       createPortfolioTab("nav-professional", "img/portfolio/realsoldierwar-banner.png", "#realsoldierwar", "Real Soldier War",
         "Attack and destroy the Enemies.", "Hyper-casual,Unity,Mobile");
