--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
                   projenize kolayca entegre edebilirsiniz.
                 </p>
 
-                <a href="https://github.com/Hot-G/G-AI" target="_blank"><img class="img-fluid rounded mb-5"
+                <a href="https://github.com/Hot-G/G-Pooler" target="_blank"><img class="img-fluid rounded mb-5"
                   src="img/Extra/footer_github.png" alt=""></a><br />
               </div>
             </div>
@@ -1274,7 +1274,7 @@
       //createPortfolioTab("nav-tools", "img/ToolsPortfolio/gaitool.png", "#tutorialmanager", "Simple Tutorial Manager",
       //  "Hızlı bir şekilde tutorial oluşturmanıza olanak sağlar.", "Unity,Tutorial,Editor Extension");
       //BUSINESS
-      createPortfolioTab("nav-business", "img/business/raisinggame-logo.png", "#raisinggame", "Raising Game Studio",
+      createPortfolioTab("nav-business", "img/business/raisinggame-logo.jpeg", "#raisinggame", "Raising Game Studio",
         "", "");
         createPortfolioTab("nav-business", "img/business/coconutgame-logo.jpeg", "#coconutgame", "Coconut Game Studio",
         "", "");
