Medium Button added

--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
             href="https://www.linkedin.com/in/cihat-%C3%B6zdemir-4354a2177/" target="_blank">
             <i class="fab fa-fw fa-linkedin-in"></i>
           </a>
-          <!-- <a class="btn btn-outline-light btn-social mx-1" href="https://medium.com/@abdulla.aldandarawy" target="_blank">
+          <a class="btn btn-outline-light btn-social mx-1" href="https://medium.com/@cihat-ozdemir" target="_blank">
             <i class="fab fa-fw fa-medium-m"></i>
-          </a> -->
+          </a>
           <a class="btn btn-outline-light btn-social mx-1"
             href="https://www.youtube.com/channel/UCK43GgKU2zyycd40MkwolRA" target="_blank">
             <i class="fab fa-fw fa-youtube"></i>
