New tools and properties added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Game Programmer</p>
+      <p class="masthead-subheading font-weight-light mb-0">Unity Developer / Game Programmer</p>
       <div class="divider-custom divider-light">
       </div>
       <!-- <a href="https://www.youracclaim.com/badges/35ee128e-a059-42f3-84da-2f9c64f313df" target="_blank">
@@ -160,7 +160,7 @@
 
       <!-- About Section Content -->
       <div class="row">
-        Ben Cihat Özdemir. Şu anda Raising Game şirketinde çalışan bir oyun geliştiricisiyim.
+        Ben Cihat Özdemir. Şu anda CDM Vision şirketinde Unity Developer olarak çalışıyorum.
         Çocukken tanıştığım Unreal Development Kit ile birlikte kendi içeriklerimi üretmeye çalıştım ve bundan her zaman
         zevk aldım.
         13 yaşımda kişisel bilgisayarımı edindikten sonra, oyunların tam olarak nasıl yapıldığı çok fazla dikkatimi
@@ -826,6 +826,51 @@
       </div>
     </div>
   </div>
+  
+  <!-- Portfolio Modal Tutorial Manager -->
+  <div class="portfolio-modal modal fade" id="g-tutorial-manager" tabindex="-1" role="dialog"
+    aria-labelledby="modalPrefabManagerLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+        </button>
+        <div class="modal-body text-center">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-8">
+                <!-- Portfolio Modal - Title -->
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">G-Tutorial Manager</h2>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon">
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <div class="divider-custom-line"></div>
+                </div>
+                <!-- Portfolio Modal - Image -->
+                <img class="img-fluid rounded mb-5" src="img/ToolsPortfolio/gtutorialmanager-inner.jpg" alt="">
+                <!-- Portfolio Modal - Text -->
+                <p class="mb-5 text">Oyununuza kolay bir şekilde tutorial, ekleyebilir, hızlıca düzenleyebilirsiniz. Esnek bir yapıdan oluşmaktadır.
+                </p>
+
+                <a href="https://github.com/Hot-G/G-Tutorial-Manager" target="_blank"><img class="img-fluid rounded mb-5"
+                    src="img/Extra/footer_github.png" alt=""></a><br />
+
+                <!--  <button class="btn btn-primary" href="#" data-dismiss="modal">
+                                    <i class="fas fa-times fa-fw"></i>
+                                    Close Window
+                                </button> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- G-Pooler -->
   <div class="portfolio-modal modal fade" id="g-pooler" tabindex="-1" role="dialog" aria-labelledby="g-poolerLabel"
@@ -1044,6 +1089,48 @@
   <!-- COMPANY -->
   <!----------------------------------------------->
 
+          <!-- CDM Vision -->
+          <div class="portfolio-modal modal fade" id="cdmvision" tabindex="-1" role="dialog" aria-labelledby="cdmvisionLabel"
+          aria-hidden="true">
+          <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">
+                  <i class="fas fa-times"></i>
+                </span>
+              </button>
+              <div class="modal-body text-center">
+                <div class="container">
+                  <div class="justify-content-center">
+                    <div class="col-lg-8 center-div">
+                      <!-- Portfolio Modal - Title -->
+                      <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">CDM Vision</h2>
+                      <!-- Icon Divider -->
+                      <div class="divider-custom">
+                        <div class="divider-custom-line"></div>
+                        <div class="divider-custom-icon">
+                          <i class="fas fa-star"></i>
+                        </div>
+                        <div class="divider-custom-line"></div>
+                      </div>
+
+                    </div>
+
+                    <!-- Portfolio Modal - Images -->
+                    <img class="img-fluid rounded mb-5" src="img/business/cdmvision-logo.jpg" alt="">
+                    <!-- Portfolio Modal - Text -->
+                      <p class="mb-5 text">CDM Vision bünyesinde çalışırken üzerinde çalıştığım yazılımlar:<br />
+                        • SuPAR<br />
+                        • Mobile Data Transfer<br />
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+  
       <!-- Raising Game Studio -->
       <div class="portfolio-modal modal fade" id="raisinggame" tabindex="-1" role="dialog" aria-labelledby="raisinggameLabel"
       aria-hidden="true">
@@ -1072,7 +1159,7 @@
                 </div>
   
                 <!-- Portfolio Modal - Images -->
-                <img class="img-fluid rounded mb-5" src="img/business/raisinggame-logo.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/business/raisinggame-logo.jpeg" alt="">
                 <!-- Portfolio Modal - Text -->
                   <p class="mb-5 text"><br />Raising Game Studio bünyesinde çalışırken geliştirdiğim oyunlar:<br />
                     • 3D Merge<br />
@@ -1271,9 +1358,13 @@
         "Kolaylıkla davranış ağacı oluşturmanızı sağlayan Unity eklentisidir.", "Unity,AI,Behavior Tree,Editor Extension");
       createPortfolioTab("nav-tools", "img/ToolsPortfolio/g-pooler-tool-banner.png", "#g-pooler", "G-Pooler",
         "Obje havuzu oluşturmayı ve kullanmayı kolaylaştıran Unity eklentisidir.", "Unity,Object Pool,Editor Extension");
+      createPortfolioTab("nav-tools", "img/ToolsPortfolio/gtutorialmanager-banner.jpeg", "#g-tutorial-manager", "G-Tutorial Manager",
+        "Esnek bir şekilde tutorial ekleyebilmenizi sağlar.", "Unity,Tutorial Manager,Editor Extension");
       //createPortfolioTab("nav-tools", "img/ToolsPortfolio/gaitool.png", "#tutorialmanager", "Simple Tutorial Manager",
       //  "Hızlı bir şekilde tutorial oluşturmanıza olanak sağlar.", "Unity,Tutorial,Editor Extension");
       //BUSINESS
+      createPortfolioTab("nav-business", "img/business/cdmvision-logo.jpg", "#cdmvision", "CDM Vision",
+        "", "");
       createPortfolioTab("nav-business", "img/business/raisinggame-logo.jpeg", "#raisinggame", "Raising Game Studio",
         "", "");
         createPortfolioTab("nav-business", "img/business/coconutgame-logo.jpeg", "#coconutgame", "Coconut Game Studio",
